--- a/findit/src/main/resources/application.properties
+++ b/findit/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=Findit
+spring.datasource.url = mongodb://localhost:27017
